creada la clase producto, añadida ordenación por categoría